# chassis_controller

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_template.txt  Makefile  README.md  chassis_controller.ioc  chassises_controller.ioc
.eide/: eide.json  eide.yml
UserCode/: CMakeLists.txt
UserCode/app/: app.c  app.h  chassis.c  chassis.h  device.c  device.h  system.h
UserCode/bsp/: can_driver.c  can_driver.h  gpio_driver.h  pwm.h
UserCode/drivers/: DJI.c  DJI.h  HWT101CT.c  HWT101CT.h  chassis_mecanum4.c  chassis_mecanum4.h  chassis_omni4.c  chassis_omni4.h  chassis_steering4.c  chassis_steering4.h  steering_wheel.c  steering_wheel.h
UserCode/interfaces/: chassis_if.c  chassis_if.h  motor_if.c  motor_if.h
UserCode/libs/: pid_motor.c  pid_motor.h  pid_pd.c  pid_pd.h  s_curve.c  s_curve.h
